commit Obtention d'erreur

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "Yerror.playErrorSound",
-      "title": "Yerror"
-    }]
+    "commands": [
+      {
+        "command": "Yerror.playErrorSound",
+        "title": "Yerror"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -25,13 +27,13 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.82.0",
     "@types/mocha": "^10.0.2",
     "@types/node": "18.x",
+    "@types/vscode": "^1.82.0",
+    "@vscode/test-electron": "^2.3.4",
     "eslint": "^8.50.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.2.2",
-    "@vscode/test-electron": "^2.3.4"
+    "typescript": "^5.2.2"
   }
 }
