--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "node-notifier": "^10.0.1"
   }
 }
