--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "lodash.debounce": "^4.0.8",
     "node-notifier": "^10.0.1",
     "play-sound": "^1.1.6"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lucas04200/YERROR"
   }
 }
