--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "yerror",
+  "publisher": "Yerror",
   "displayName": "YERROR",
   "description": "Gestion d'erreur avec des sons ",
   "version": "0.0.1",
