--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yerror",
-  "publisher": "Yerror",
+  "publisher": "Yerror-16",
   "displayName": "YERROR",
   "description": "Gestion d'erreur avec des sons ",
   "version": "0.0.1",
